# nlpilot-ide

./: .gitignore  DEV.md  README.md  REBUILD_PLAN.md  pyproject.toml  requirements.txt
examples/: custom_blocks.json  demo.nlt  sample.py  struct.nlt
nlpilot_ide/: __init__.py
nlpilot_ide/desktop/: main.py
nlpilot_ide/server/: app.py  controller.py  project.py  run.py  ws_protocol.py
nlpilot_ide/server/engines/: nlpilot_engine.py  python_engine.py
scripts/: install_shortcut.ps1  make_icon.py  make_screenshots.py  start.ps1  verify_srcbp.py
tests/: test_nlpilot_controller.py  test_nlpilot_tracer.py  test_project_api.py  test_python_debug.py  test_ws_handshake.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css
web/src/blocks/: multilineField.ts  nltBlocks.ts
web/src/components/: BlocksView.tsx  BusyOverlay.tsx  DebugPanels.tsx  DebugToolbar.tsx  EditorPane.tsx  FileTree.tsx  GenView.tsx  Split.tsx  StatusBar.tsx  Tabs.tsx
web/src/lang/: nlt.ts
web/src/state/: debug.ts  store.ts
web/src/ws/: client.ts  protocol.ts
