[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpilot-ide"
version = "0.1.0"
description = "Reference editor/debugger IDE for the nlpilot framework"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pywebview>=5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
# nlpilot itself, installed editable during dev:
#   pip install -e ../nlpilot
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
nlpilot-ide = "nlpilot_ide.desktop.main:main"
nlpilot-ide-server = "nlpilot_ide.server.run:main"

[tool.setuptools.packages.find]
include = ["nlpilot_ide*"]
